--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -78,7 +78,7 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .map_view_block{height: 100%;width: 100%;}
 .admin_main_wrap .filter{background: #ef4647;width: 28px;height: 30px;position: fixed;right: 0px;text-align: center;line-height: 24px;color: #fff;text-shadow: 0px 1px 1px #000;font-size: 20px;z-index: 4;}
 .admin_main_wrap .filter.alfa_filter{position: absolute; float: left; cursor: pointer; margin-right: 56px;}
-.alfa_pagination{right: -60px;position: fixed;z-index: 9999;transition: .5s linear;top: 37%;}
+.alfa_pagination{right: -60px;position: fixed;z-index: 2;transition: .5s linear;top: 37%;}
 .alfa_pagination.alfa_pagination_open{right: 0px;}
 .admin_main_wrap .filter.alfa_filter .fa{font-size: 16px;font-weight: normal;}
 .admin_main_wrap .alfa_filter_litters{z-index: 8; background: transparent;width: 56px;float: right;}
@@ -138,7 +138,7 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .admin_main_wrap .left_user_blocks .list_block{margin-bottom: 3px;}
 .admin_main_wrap .left_user_blocks .provider_mask{top: 2px;}
 .left_wrap{overflow-x: hidden;overflow-y: auto;}
-.admin_main_wrap .bottom_actions_block{ background: #273545;height: 50px;width: auto;border-radius: 6px 6px 0px 0px;position: absolute;bottom: 0px;left: 50%;transform: translateX(-50%);padding: 0px 14px 0px 0px;transition: .2s linear;z-index: 99;overflow: hidden;}
+.admin_main_wrap .bottom_actions_block{ background: #273545;height: 50px;width: auto;border-radius: 6px 6px 0px 0px;position: absolute;bottom: 0px;left: 50%;transform: translateX(-50%);padding: 0px 14px 0px 0px;transition: .2s linear;z-index: 2;overflow: hidden;}
 .admin_main_wrap .bottom_actions_block.show_block{height: 0px;}
 span.actions_switch{width: 42px;height: 18px;background:url(../images/actions_block_down.png);content: "";position: absolute;left: 50%;transform: translateX(-50%);bottom: 50px;transition: .2s linear;cursor: pointer;}
 span.actions_switch.show_act{bottom: 0px;background:url(../images/actions_block_top.png);}
@@ -223,7 +223,7 @@ input:checked + .slider:before {-webkit-transform: translateX(34px);-ms-transfor
 .ml_profile.profile_open>ol>li:nth-of-type(3) {right: 126px;top: 103px;}
 .ml_profile.profile_open>ol>li:nth-of-type(4) {right: 71px;top: 134px;}
 .ml_profile.profile_open>ol>li:nth-of-type(5) {right: 10px;top: 150px;}
-.filter_table{text-shadow:none;width: calc(100% - 20px);margin-top: -8px;height: auto;/*overflow: auto;*/position: absolute;z-index:10;transition: .2s linear;}
+.filter_table{text-shadow:none;width: calc(100% - 20px);margin-top: -8px;height: auto;/*overflow: auto;*/position: absolute;z-index:2;transition: .2s linear;}
 .filter_table.filter_hide{height: 16px;}
 .filter_table .panel{border-radius: 0px 0px 4px 4px;border-width:1px;max-height: 200px;margin-bottom: 0px;transition: .2s linear;padding-top: 20px;background: #ef4647;border-color: #ef4647;}
 .filter_table.filter_hide .panel{height: 0px;overflow:hidden;border-width:0px;padding: 0px;background: transparent;}
@@ -529,7 +529,7 @@ table .switch.on .slider:before {-webkit-transform: translateX(24px);-ms-transfo
 .custome_pagination .pageMaxPip, .pageMinPip {font-size: 12px; color: #777; position: absolute; bottom: -30px; width: 20px; }
 .custome_pagination .pageMaxPip {right: -10px; }
 .custome_pagination .pageMinPip {left: -10px; }
-.custome_pagination .pagination {width: 350px; text-align: center; background: #ef4647; padding: 17px 0px 8px 0px; position: fixed; right: -324px; z-index: 999; bottom: 0px; border-radius:0px; transition: .5s linear; cursor: pointer; }
+.custome_pagination .pagination {width: 350px; text-align: center; background: #ef4647; padding: 17px 0px 8px 0px; position: fixed; right: -324px; z-index: 2; bottom: 0px; border-radius:0px; transition: .5s linear; cursor: pointer; }
 .custome_pagination .pagination.pagination_open{right: 0px;}
 .custome_pagination .pagination::before {position: absolute; left: -30px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 50px 30px 50px 0px; border-color: transparent #ef4647 transparent transparent; top: 0px; }
 .custome_pagination .pageSlider {display: inline-block; }
@@ -1085,7 +1085,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 .library-wrap .thumbnail .library_actions .fa.fa-share-alt{ margin-right: 5px; font-size: 12px;position:static;color:#fff;background:transparent;width:auto;height:auto;text-align:center;line-height:normal;border-radius:0%;cursor:pointer}
 .library-wrap .thumbnail .library_actions .fa.fa-minus{ margin-right: 5px; font-size: 12px;position:static;color:#fff;background:transparent;width:auto;height:auto;text-align:center;line-height:normal;border-radius:0%;cursor:pointer}*/
 .library-wrap .thumbnail .title{position:absolute;background:#273545;color:#fff;text-align:center;font-size:13px;bottom:0;width:100%;border-radius:0 0 4px 4px;text-shadow:none;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;padding:0 5px;line-height:25px}
-.library-wrap .thumbnail .fa.fa-lock{position:absolute;right:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
+.library-wrap .thumbnail .fa.fa-lock{position:absolute;left:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
 .library-wrap .thumbnail .fa.fa-unlock{position:absolute;left:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
 .library-wrap .thumbnail .icon_count{position: absolute; right: 5px; bottom: 16px; color: #FFF; background: #EF4647;height: 20px; line-height: 18px; border-radius: 4px; cursor: pointer; z-index: 1; font-size: 12px; padding: 0px 5px;}
 .library-wrap .thumbnail .icon_count .fa.fa-share-alt{padding-right: 5px;}
