--- a/client/stylesheets/css/mymoolya-icons.css
+++ b/client/stylesheets/css/mymoolya-icons.css
@@ -14,6 +14,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.my-ml-book_now:before {
+  content: "\ea0c";
+}
+.my-ml-activity:before {
+  content: "\ea08";
+}
+.my-ml-contact_details:before {
+  content: "\ea09";
+}
+.my-ml-service:before {
+  content: "\ea0a";
+}
+.my-ml-task:before {
+  content: "\ea0b";
+}
 .my-ml-holiday:before {
   content: "\ea06";
 }
